[package]
name = "khaki"
version = "0.1.0"
authors = ["Kartikaya Gupta"]
edition = "2018"
license-file = "LICENSE.txt"

description = "A tool to write rust scripts with less boilerplate"
homepage = "https://github.com/staktrace/khaki/blob/master/README.md"
repository = "https://github.com/staktrace/khaki"
readme = "README.md"
keywords = ["scripts", "boilerplate", "compiler", "rust", "shell"]
categories = ["development-tools", "command-line-utilities"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
dirs = "3.0.1"
hmac-sha256 = "0.1.2"
